Update metadata + favicon + minor changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Genshin Primo Tracker",
-  "name": "UH IDK",
+  "short_name": "Genshin Primo",
+  "name": "Genshin Primo Tracker",
   "icons": [
     {
       "src": "favicon.ico",
