--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-primo",
-  "version": "3.1.0.1",
+  "version": "3.2.1",
   "private": true,
   "homepage": "http://sirderpyherp.github.io/genshin-primo",
   "dependencies": {
@@ -21,6 +21,8 @@
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
+    "luxon": "^3.0.4",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-big-calendar": "^0.40.0",
     "react-calendar": "^3.7.0",
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/luxon": "^3.0.2",
     "@types/react-calendar": "^3.5.0",
     "gh-pages": "^3.2.3"
   }
