--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && npx gh-pages -d build -t true",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
@@ -25,10 +26,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-static": "^3.0.1",
     "bits-ui": "^0.19.7",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "fft.js": "^4.0.4",
+    "gh-pages": "^6.1.1",
     "lucide-svelte": "^0.358.0",
     "ml-convolution": "^2.0.0",
     "ml-fft": "^1.3.5",
