--- a/package.json
+++ b/package.json
@@ -25,9 +25,18 @@
   },
   "type": "module",
   "dependencies": {
+    "bits-ui": "^0.19.7",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
+    "fft.js": "^4.0.4",
     "lucide-svelte": "^0.358.0",
+    "ml-convolution": "^2.0.0",
+    "ml-fft": "^1.3.5",
+    "mode-watcher": "^0.3.0",
+    "svelte-chartjs": "^3.1.5",
+    "svelte-icons": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "tailwind-variants": "^0.2.0"
+    "tailwind-variants": "^0.2.0",
+    "webfft": "^1.0.3"
   }
 }
