--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/luxon": "^3.4.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
@@ -33,6 +34,7 @@
     "fft.js": "^4.0.4",
     "gh-pages": "^6.1.1",
     "lucide-svelte": "^0.358.0",
+    "luxon": "^3.4.4",
     "ml-convolution": "^2.0.0",
     "ml-fft": "^1.3.5",
     "mode-watcher": "^0.3.0",
